fix: full screen loader is too hard to see

--- a/packages/webapp/src/components/FullScreenLoader/index.less
+++ b/packages/webapp/src/components/FullScreenLoader/index.less
@@ -1,5 +1,8 @@
 .full-screen-loader {
-  opacity: @modal-backdrop-opacity;
   z-index: 10000;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
